--- a/about.html
+++ b/about.html
@@ -21,12 +21,16 @@
             <main id="principal-about">
                 <a href="index.html"><img id="about-wiw-logo" src="assets/img/png/wiwwhite.png" alt="Logo WiW"></a>
                 <p id="text-about">
-                  Im WiW, generative artist from São Paulo - Brasil.<br><br>
-                  My artworks explore the symbiotic relationship between humans and machines. My focus lies in creating visuals that express this reflection, using generative art as my primary creative tool. HTML is my preferred format for showcasing my work, utilizing JavaScript libraries such as p5.js and hydra-synth. On the portfolio section you can check my projects.<br><br>
-                  I am open for collaborations, cooperations, and projects that involve my creative abilities. Feel free to get in touch for any inquiries or opportunities.
-                  <a id="tag-email" href="mailto:wiw@wiwsic.xyz">wiw@wiwsic.xyz</a>
+                    Im WiW, generative artist from São Paulo - Brasil.<br><br>
+                    My artworks explore the symbiotic relationship between humans and machines. My focus lies in
+                    creating visuals that express this reflection, using generative art as my primary creative tool.
+                    HTML is my preferred format for showcasing my work, utilizing JavaScript libraries such as p5.js and
+                    hydra-synth. On the portfolio section you can check my projects.<br><br>
+                    I am open for collaborations, cooperations, and projects that involve my creative abilities. Feel
+                    free to get in touch for any inquiries or opportunities.
+                    <a id="tag-email" href="mailto:wiw@wiwsic.xyz">wiw@wiwsic.xyz</a>
                 </p>
-              </main>
+            </main>
             <footer>
                 <nav>
                     <a href="https://linktr.ee/wiwsic" class="follow">follow me on the internet</a>
