--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/index.css">
 </head>
+
 <body>
     <div class="container">
         <div class="content">
@@ -20,12 +22,13 @@
                 <div class="box2"></div>
 
                 <nav>
-                    <a href="" class="humachine-link">humachine human<span class="experiment-text">ized experiment</span></a>
+                    <a href="" class="humachine-link">humachine human<span class="experiment-text">ized
+                            experiment</span></a>
                     <a href="about.html" class="about-link">about</a>
-                    
-        </nav>
+
+                </nav>
             </header>
-            <main id="principal"> 
+            <main id="principal">
                 <video id="video-player" autoplay muted controls loop>
                     <div id="video-list"></div>
                 </video>
@@ -35,13 +38,15 @@
             <footer>
                 <nav>
                     <a href="https://linktr.ee/wiwsic" class="follow">follow me on the internet</a>
-                    <a href="mailto:wiw@wiwsic.xyz?subject=Email%20Subject&body=Email%20Body" class="e-mail">send me e-mail</a>
+                    <a href="mailto:wiw@wiwsic.xyz?subject=Email%20Subject&body=Email%20Body" class="e-mail">send me
+                        e-mail</a>
                     <a href="portfolio.html" class="portfolio-link">portfolio</a>
-                    
+
                 </nav>
-    </footer>
+            </footer>
+        </div>
     </div>
-</div>
-<script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
+
 </html>
