--- a/portfolio.html
+++ b/portfolio.html
@@ -13,30 +13,37 @@
     <div class="container">
         <div class="content">
             <div class="portfolio-column">
-                <a href="index.html"><p >humachine humanized experiment</p></a>
+                <a href="index.html">
+                    <p>humachine humanized experiment</p>
+                </a>
             </div>
             <main id="principal-portfolio">
                 <div class="mid-column"></div>
                 <div class="gamb"></div>
                 <div class="container1-portfolio">
                     <p><strong>portfolio</strong><br><br>
-                    <a href="https://teia.art/wiw">hicetnunc // teia</a><br><br>
-                    <a href="https://teia.art/wiw">general works</a><br>
-                    <a href="https://objkt.com/profile/tz1aYyPTskbYxHfTssN73iuk1g9FpS2S1Wpq/created">degenerate(digital works)</a><br>
-                    <a href="https://objkt.com/profile/tz1MWkJdzZWbifPU6zThYh1xQQjLANyy9Qo6/created">machine dream (audiovisual things)</a><br>
-                    <a href="https://objkt.com/collection/KT1QQotpcthXfDDFYfBK2uSbesr9j25TDTtR">humachine perceptions (AI experimentations)</a>
+                        <a href="https://teia.art/wiw">hicetnunc // teia</a><br><br>
+                        <a href="https://teia.art/wiw">general works</a><br>
+                        <a href="https://objkt.com/profile/tz1aYyPTskbYxHfTssN73iuk1g9FpS2S1Wpq/created">degenerate(digital
+                            works)</a><br>
+                        <a href="https://objkt.com/profile/tz1MWkJdzZWbifPU6zThYh1xQQjLANyy9Qo6/created">machine dream
+                            (audiovisual things)</a><br>
+                        <a href="https://objkt.com/collection/KT1QQotpcthXfDDFYfBK2uSbesr9j25TDTtR">humachine
+                            perceptions (AI experimentations)</a>
                     </p>
-                  </div>
-                  <div class="container2-portfolio">
+                </div>
+                <div class="container2-portfolio">
                     <p><strong>Exhibitions and others</strong><br><br>
-                        <a href="https://www.youtube.com/live/iZp9E_isNnQ?feature=share&t=19165">Hiperorgânicos 10: OpenLAB - NANO</a><br>
+                        <a href="https://www.youtube.com/live/iZp9E_isNnQ?feature=share&t=19165">Hiperorgânicos 10:
+                            OpenLAB - NANO</a><br>
                         <a href="https://www.pupiladilatada.xyz/">MAM RIO - PUPILA DILATADA</a><br>
                         <a href="https://pcd2022.encontrosdigitais.com.br/galeria/">Processing Day Brasil 2022</a><br>
                         <a href="https://youtu.be/42FcQNHNJe8?t=622">Chroma key for Brasil Grime Show</a><br>
-                        <a href="https://open.spotify.com/show/1D9lbD5awJJK3JrJ43CjFs?si=8184c92d281e4aea">host at OBJKTcast</a>
-                        </p>
-                  </div>
-                  <div class="container3-portfolio">
+                        <a href="https://open.spotify.com/show/1D9lbD5awJJK3JrJ43CjFs?si=8184c92d281e4aea">host at
+                            OBJKTcast</a>
+                    </p>
+                </div>
+                <div class="container3-portfolio">
                     <div class="caixa-subtitulo-3">
                         <p><strong>FXHASH works</strong><br><br>
                         </p>
@@ -58,8 +65,8 @@
                             <a href="https://www.fxhash.xyz/generative/16307">sistemas.15</a>
                         </nav>
                     </div>
-                  </div>
-                  <div class="container4-portfolio">
+                </div>
+                <div class="container4-portfolio">
                     <div class="caixa-subtitulo-4">
                         <p><strong>VERSUM works</strong><br><br>
                         </p>
@@ -69,8 +76,8 @@
                             <a href="https://versum.xyz/token/versum/7991">espectro-3</a>
                         </nav>
                     </div>
-                  </div>
-              </main>
+                </div>
+            </main>
             <footer>
                 <nav>
                     <a href="https://linktr.ee/wiwsic" class="follow">follow me on the internet</a>
@@ -82,4 +89,5 @@
     </div>
     <script src="script.js"></script>
 </body>
+
 </html>
