--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
                 <nav>
                     <a href="https://linktr.ee/wiwsic" class="follow">follow me on the internet</a>
                     <a href="mailto:wiw@wiwsic.xyz" class="e-mail">send me e-mail</a>
-                    <a href="" class="portfolio-link">portfolio</a>
+                    <a href="portfolio.html" class="portfolio-link">portfolio</a>
                 </nav>
             </footer>
         </div>
