fixed the degenerate-1 video and adjust the w/h

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <div id="video-list"></div>
                 </video>
                 <a id="text-box" href="https://www.fxhash.xyz/generative/16307">sistemas.15</a>
-                <button id="next-btn" style="background-image: url('assets/img/png/next.png')">Next</button>
+                <button id="next-btn" style="background-image: url('assets/img/png/nextwhite.png')">Next</button>
             </main>
             <footer>
                 <nav>
