--- a/about.html
+++ b/about.html
@@ -1,46 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>About</title>
-    <link rel="stylesheet" href="css/reset.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About - WiW</title>
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/about.css">
 </head>
-
 <body>
-    <div class="container">
-        <div class="content">
-            <div class="about-column"></div>
-            <header>
-                <div class="about-box">
-                    <a class="about-title">humachine humanized experiment is my pulse to humachine</a>
-                </div>
-            </header>
-            <main id="principal-about">
-                <a href="index.html"><img id="about-wiw-logo" src="assets/img/png/wiwwhite.png" alt="Logo WiW"></a>
-                <p id="text-about">
-                    Im WiW, generative artist from São Paulo - Brasil.<br><br>
-                    My artworks explore the symbiotic relationship between humans and machines. My focus lies in
-                    creating visuals that express this reflection, using generative art as my primary creative tool.
-                    HTML is my preferred format for showcasing my work, utilizing JavaScript libraries such as p5.js and
-                    hydra-synth. On the portfolio section you can check my projects.<br><br>
-                    I am open for collaborations, cooperations, and projects that involve my creative abilities. Feel
-                    free to get in touch for any inquiries or opportunities.
-                    <a id="tag-email" href="mailto:wiw@wiwsic.xyz">wiw@wiwsic.xyz</a>
-                </p>
-            </main>
-            <footer>
-                <nav>
-                    <a href="https://linktr.ee/wiwsic" class="follow">follow me on the internet</a>
-                    <a href="mailto:wiw@wiwsic.xyz" class="e-mail">send me e-mail</a>
-                    <a href="portfolio.html" class="portfolio-link">portfolio</a>
-                </nav>
-            </footer>
-        </div>
-    </div>
-    <script src="script.js"></script>
-</body>
+    <header>
+        <a href="index.html" class="logo-link">
+            <img src="assets/img/png/wiwblack.png" alt="WiW Logo" class="logo">
+        </a>
+        <nav>
+            <a href="#" class="active">humachine human<span>ized experiment</span></a>
+            <a href="about.html" class="active">about</a>
+        </nav>
+    </header>
 
+    <main id="principal-about">
+        <div class="content">
+            <div class="text-content">
+                <p>
+                    I'm WiW, generative artist from São Paulo - Brasil.<br><br>
+                    My artworks explore the symbiotic relationship between humans and machines. My focus lies in creating visuals that express this reflection, using generative art as my primary creative tool. HTML is my preferred format for showcasing my work, utilizing JavaScript libraries such as p5.js and hydra-synth. On the portfolio section you can check my projects.<br><br>
+                    I am open for collaborations, cooperations, and projects that involve my creative abilities. Feel free to get in touch for any inquiries or opportunities.
+                </p>
+            </div>
+            <div class="media-content">
+                <img src="assets/img/png/wiw.jpeg" alt="WiW Logo" id="about-wiw-logo">
+            </div>
+        </div>
+    </main>
+
+    <footer>
+        <nav>
+            <a href="https://linktr.ee/wiwsic">follow me on the internet</a>
+            <a href="mailto:wiw@wiwsic.xyz">send me e-mail</a>
+            <a href="portfolio.html">portfolio</a>
+            <a href="gallery.html">gallery</a>
+        </nav>
+    </footer>
+</body>
 </html>
