--- a/portfolio.html
+++ b/portfolio.html
@@ -1,93 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Portfolio</title>
-    <link rel="stylesheet" href="css/reset.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio - WiW</title>
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/portfolio.css">
 </head>
-
 <body>
-    <div class="container">
-        <div class="content">
-            <div class="portfolio-column">
-                <a href="index.html">
-                    <p>humachine humanized experiment</p>
-                </a>
-            </div>
-            <main id="principal-portfolio">
-                <div class="mid-column"></div>
-                <div class="gamb"></div>
-                <div class="container1-portfolio">
-                    <p><strong>portfolio</strong><br><br>
-                        <a href="https://teia.art/wiw">hicetnunc // teia</a><br><br>
-                        <a href="https://teia.art/wiw">general works</a><br>
-                        <a href="https://objkt.com/profile/tz1aYyPTskbYxHfTssN73iuk1g9FpS2S1Wpq/created">degenerate(digital
-                            works)</a><br>
-                        <a href="https://objkt.com/profile/tz1MWkJdzZWbifPU6zThYh1xQQjLANyy9Qo6/created">machine dream
-                            (audiovisual things)</a><br>
-                        <a href="https://objkt.com/collection/KT1QQotpcthXfDDFYfBK2uSbesr9j25TDTtR">humachine
-                            perceptions (AI experimentations)</a>
-                    </p>
-                </div>
-                <div class="container2-portfolio">
-                    <p><strong>Exhibitions and others</strong><br><br>
-                        <a href="https://www.youtube.com/live/iZp9E_isNnQ?feature=share&t=19165">Hiperorgânicos 10:
-                            OpenLAB - NANO</a><br>
-                        <a href="https://www.pupiladilatada.xyz/">MAM RIO - PUPILA DILATADA</a><br>
-                        <a href="https://pcd2022.encontrosdigitais.com.br/galeria/">Processing Day Brasil 2022</a><br>
-                        <a href="https://youtu.be/42FcQNHNJe8?t=622">Chroma key for Brasil Grime Show</a><br>
-                        <a href="https://open.spotify.com/show/1D9lbD5awJJK3JrJ43CjFs?si=8184c92d281e4aea">host at
-                            OBJKTcast</a>
-                    </p>
-                </div>
-                <div class="container3-portfolio">
-                    <div class="caixa-subtitulo-3">
-                        <p><strong>FXHASH works</strong><br><br>
-                        </p>
-                        <nav>
-                            <a href="https://www.fxhash.xyz/generative/965">paralelas.1</a>
-                            <a href="https://www.fxhash.xyz/generative/1250">cubos.2</a>
-                            <a href="https://www.fxhash.xyz/generative/1405">reconectar.3</a>
-                            <a href="https://www.fxhash.xyz/generative/1665">placas.4</a>
-                            <a href="https://www.fxhash.xyz/generative/1942">aurora.5</a>
-                            <a href="https://www.fxhash.xyz/generative/2163">escadas.6</a>
-                            <a href="https://www.fxhash.xyz/generative/2543">ondas.7</a>
-                            <a href="https://www.fxhash.xyz/generative/3003">tempo.8</a>
-                            <a href="https://www.fxhash.xyz/generative/3889">deserto.9</a>
-                            <a href="https://www.fxhash.xyz/generative/4859">antimateria.10</a>
-                            <a href="https://www.fxhash.xyz/generative/5859">neurose.11</a>
-                            <a href="https://www.fxhash.xyz/generative/7898">anomalia.12</a>
-                            <a href="https://www.fxhash.xyz/generative/9469">detalhe.13</a>
-                            <a href="https://www.fxhash.xyz/generative/11835">estruturas.14</a>
-                            <a href="https://www.fxhash.xyz/generative/16307">sistemas.15</a>
-                        </nav>
-                    </div>
-                </div>
-                <div class="container4-portfolio">
-                    <div class="caixa-subtitulo-4">
-                        <p><strong>VERSUM works</strong><br><br>
-                        </p>
-                        <nav>
-                            <a href="https://versum.xyz/token/versum/237">construto-1</a>
-                            <a href="https://versum.xyz/token/versum/1732">bios-2</a>
-                            <a href="https://versum.xyz/token/versum/7991">espectro-3</a>
-                        </nav>
-                    </div>
-                </div>
-            </main>
-            <footer>
-                <nav>
-                    <a href="https://linktr.ee/wiwsic" class="follow">follow me on the internet</a>
-                    <a href="mailto:wiw@wiwsic.xyz" class="e-mail">send me e-mail</a>
-                    <a href="" class="portfolio-link">portfolio</a>
-                </nav>
-            </footer>
-        </div>
-    </div>
-    <script src="script.js"></script>
-</body>
+    <header>
+        <a href="index.html" class="logo-link">
+            <img src="assets/img/png/wiwblack.png" alt="WiW Logo" class="logo">
+        </a>
+        <nav>
+            <a href="#" class="active">humachine human<span>ized experiment</span></a>
+            <a href="about.html">about</a>
+        </nav>
+    </header>
 
+    <main id="principal-portfolio">
+        <div class="content">
+            <div class="portfolio-section">
+                <h2>General</h2>
+                <ul>
+                    <li><a href="https://teia.art/wiw" target="_blank">hicetnunc // teia</a></li>
+                    <li><a href="https://zora.co/@wiwsic" target="_blank">zora</a></li>
+                    <li><a href="https://www.fxhash.xyz/u/W%20i%20W" target="_blank">fxhash</a></li>
+                    <li><a href="https://256art.com/project/quase-3" target="_blank">256art</a></li>
+                    <li><a href="https://prohibition.art/project/pseudo" target="_blank">Prohibition</a></li>
+                    <li><a href="https://beta.koda.art/base/drops/eco" target="_blank">Koda</a></li>
+                    <li><a href="https://objkt.com/profile/tz1aYyPTskbYxHfTssN73iuk1g9FpS2S1Wpq/created" target="_blank">degenerate (digital works)</a></li>
+                    <li><a href="https://objkt.com/profile/tz1MWkJdzZWbifPU6zThYh1xQQjLANyy9Qo6/created" target="_blank">machine dream (audiovisual things)</a></li>
+                    <li><a href="https://objkt.com/collection/KT1QQotpcthXfDDFYfBK2uSbesr9j25TDTtR" target="_blank">humachine perceptions (AI experimentations)</a></li>
+                </ul>
+            </div>
+            <div class="portfolio-section">
+                <h2>Exhibitions and others</h2>
+                <ul>
+                    <li><a href="https://www.youtube.com/live/iZp9E_isNnQ?feature=share&t=19165" target="_blank">Hiperorgânicos 10: OpenLAB - NANO</a></li>
+                    <li><a href="https://www.pupiladilatada.xyz/" target="_blank">MAM RIO - PUPILA DILATADA</a></li>
+                    <li><a href="https://pcd2022.encontrosdigitais.com.br/galeria/" target="_blank">Processing Day Brasil 2022</a></li>
+                    <li><a href="https://youtu.be/TuV9T6vTrIM?si=4Jq61-CtkQ-zxbTG" target="_blank">Co-host of Processing Day Brasil 2023</a></li>
+                    <li><a href="https://youtu.be/42FcQNHNJe8?t=622" target="_blank">Chroma key for Brasil Grime Show</a></li>
+                    <li><a href="https://open.spotify.com/show/1D9lbD5awJJK3JrJ43CjFs?si=8184c92d281e4aea" target="_blank">host at OBJKTcast</a></li>
+                    <li><a href="https://bienal.org.br/ausencias/" target="_blank">Adaptation of the work 'Ausências ou Sintomas' for mobile, invitation from the Fundação Bienal de São Paulo.</a></li>
+                </ul>
+            </div>
+            <div class="portfolio-section">
+                <h2>Long-Form Generative</h2>
+                <ul>
+                    <li><a href="https://256art.com/project/quase-3" target="_blank">Quase</a></li>
+                    <li><a href="https://prohibition.art/project/pseudo" target="_blank">Pseudo</a></li>
+                    <li><a href="https://www.fxhash.xyz/generative/30740" target="_blank">esse</a></li>
+                    <li><a href="https://beta.koda.art/base/drops/eco" target="_blank">eco</a></li>
+                    <li><a href="https://www.fxhash.xyz/generative/16307" target="_blank">sistemas.15</a></li>
+                    <li><a href="https://www.fxhash.xyz/generative/11835" target="_blank">estruturas.14</a></li>
+                    <li><a href="https://www.fxhash.xyz/generative/9469" target="_blank">detalhe.13</a></li>
+                    <li><a href="https://www.fxhash.xyz/generative/7898" target="_blank">anomalia.12</a></li>
+                    <li><a href="https://www.fxhash.xyz/generative/5859" target="_blank">neurose.11</a></li>
+                    <li><a href="https://www.fxhash.xyz/generative/4859" target="_blank">antimateria.10</a></li>
+                    <li><a href="https://www.fxhash.xyz/generative/3889" target="_blank">deserto.9</a></li>
+                    <li><a href="https://www.fxhash.xyz/generative/3003" target="_blank">tempo.8</a></li>
+                    <li><a href="https://www.fxhash.xyz/generative/2543" target="_blank">ondas.7</a></li>
+                    <li><a href="https://www.fxhash.xyz/generative/2163" target="_blank">escadas.6</a></li>
+                    <li><a href="https://www.fxhash.xyz/generative/1942" target="_blank">aurora.5</a></li>
+                    <li><a href="https://www.fxhash.xyz/generative/1665" target="_blank">placas.4</a></li>
+                    <li><a href="https://www.fxhash.xyz/generative/1405" target="_blank">reconectar.3</a></li>
+                    <li><a href="https://www.fxhash.xyz/generative/1250" target="_blank">cubos.2</a></li>
+                    <li><a href="https://www.fxhash.xyz/generative/965" target="_blank">paralelas.1</a></li>
+                </ul>
+            </div>
+            <div class="portfolio-section">
+                <h2><a href="gallery.html">Gallery</a></h2>
+            </div>
+        </div>
+    </main>
+
+    <footer>
+        <nav>
+            <a href="https://linktr.ee/wiwsic">follow me on the internet</a>
+            <a href="mailto:wiw@wiwsic.xyz">send me e-mail</a>
+            <a href="portfolio.html">portfolio</a>
+            <a href="gallery.html">gallery</a>
+        </nav>
+    </footer>
+</body>
 </html>
