--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WiW</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/img/png/wiw32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/png/wiw16.png">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:wght@400;700&display=swap">
     <link rel="stylesheet" href="css/index.css">
 </head>
