--- a/prototipo.html
+++ b/prototipo.html
@@ -3,6 +3,8 @@
     <!-- ETHERS FOR KECCACK256 AND ABI-ENCODEPACKED -->
     <script src="./dependencies/ethers.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/img/png/wiw32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/png/wiw16.png">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <style type="text/css">
         * {
