update index again

--- a/index.html
+++ b/index.html
@@ -434,32 +434,32 @@
                 link: "https://256art.com/project/quase-3"
             },
             {
-                title: "SISTEMAS",
-                description: "In 'sistemas.15' I explore the assembly of systems through a painting algorithm that works with point definition and connection, movement traces, color overlays, blend modes, alpha control, and detailed color palette selection. Different canvas formats present various 'angles' of the work, where the humachine paints thoughts. The system features 2 groups of palettes with 5 and 2 colors respectively (43 total palettes), 5 background color types, 4 background texture patterns, and 15-25 connection points that link lines, beziers, squares and ellipses. Every generative art project drives me on an auto-consciousness journey, with each piece reflecting this exploration. Made with p5js.",
-                media: "assets/video/sistemas.mp4",
+                title: "00100000",
+                description: "Binary representation of '32' in digital form. Image modulation through hydra-synth, controlled via MIDI signaling. Part of the '127.0.0.1 Collection', continuing the exploration of digital protocols and localhost consciousness.",
+                media: "assets/video/32.mp4",
                 type: "video",
-                link: "https://www.fxhash.xyz/project/sistemas.15"
+                link: "https://objkt.com/tokens/KT1QauCYexBbPcYnVkcND61L4xmfrKacTz1W/1"
             },
             {
-                title: "PSEUDO",
-                description: "In 'Pseudo' I continue my exploration of abstract aesthetics, aiming to create a visual experience that evokes familiarity without being completely definable. The interplay of particle movement lies at the core of this artwork, forming a dynamic canvas where the viewer becomes an integral part of the creative process. Made with p5js.",
-                media: "assets/artworks/pseudo1.png",
-                type: "image",
-                link: "https://prohibition.art/project/pseudo"
+                title: "FERVOR DA TERRA",
+                description: "Made with hydra-synth.js, featuring image modulation and feedback techniques. Rendered at 60fps for smooth visual flow. Part of the 'S.E.E.D. x NEWTRO // Buenos Aires 2025' collection, exploring the intersection of generative art and live coding practices.",
+                media: "assets/video/FERVOR.mp4",
+                type: "video",
+                link: "https://objkt.com/tokens/KT1Ro7fyAmAiLmLignzzCeT9Q25UMgh9pWkf/24"
             },
             {
                 title: "ESSE",
                 description: "'esse' is an exploration of the intersection between typography and symmetry, delving into palindromes and symbols. Each result seeks to challenge the viewer's perception, inviting them to try to place meaning into something abstract. Made with hydra-synth.",
-                media: "assets/artworks/esse2.gif",
-                type: "image",
+                media: "assets/video/esse.mp4",
+                type: "video",
                 link: "https://www.fxhash.xyz/generative/30740"
             },
             {
-                title: "ECO",
-                description: "eco is a long-form generative art project that uses a grid system to create patterns within a composition. The algorithm allocates cells of different sizes within the grid and inserts patterns into each one. The allocation of patterns is done using flow fields to enhance distribution dynamism. It features 14 color palettes. Made with p5js.",
-                media: "assets/artworks/eco1.png",
-                type: "image",
-                link: "https://beta.koda.art/base/drops/eco"
+                title: "THE FIRST ANXIETY",
+                description: "'The First Anxiety of the Protocol' explores loopback conversations through real-time image modulation via hydra-synth, controlled through MIDI signaling. This piece delves into the recursive nature of digital communication and protocol anxiety. Part of the '127.0.0.1 Collection', examining localhost as both technical concept and metaphor for digital introspection.",
+                media: "assets/video/FIRST.mp4",
+                type: "video",
+                link: "https://objkt.com/tokens/KT1QauCYexBbPcYnVkcND61L4xmfrKacTz1W/0"
             },
             {
                 title: "APOFENIA",
