--- a/index.html
+++ b/index.html
@@ -308,6 +308,8 @@
             box-shadow: 0 4px 20px rgba(255, 255, 255, 0.2);
         }
 
+
+
         .next-button {
             position: absolute;
             right: 20px;
@@ -316,7 +318,6 @@
             background: none;
             border: none;
             color: white;
-            font-size: 2.25rem;
             cursor: pointer;
             font-family: 'IBM Plex Serif', serif;
             font-weight: 400;
@@ -324,10 +325,22 @@
             padding: 10px;
             border-radius: 50%;
             transition: background-color 0.3s ease;
+            width: 50px;
+            height: 50px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
 
-        .next-button:hover {
-            background-color: rgba(255, 255, 255, 0.1);
+        .next-button svg {
+            width: 24px;
+            height: 24px;
+            fill: currentColor;
+            transition: transform 0.3s ease;
+        }
+
+        .next-button:hover svg {
+            transform: translateX(2px);
         }
 
         footer {
@@ -499,7 +512,11 @@
             </a>
             </div>
         </div>
-        <button id="next-btn" class="next-button">→</button>
+        <button id="next-btn" class="next-button">
+            <svg viewBox="0 0 24 24">
+        <path d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"/>
+    </svg>
+</button>
     </main>
 
     <footer>
