--- a/about.html
+++ b/about.html
@@ -6,9 +6,358 @@
     <title>About - WiW</title>
     <link rel="icon" type="image/png" sizes="32x32" href="assets/img/png/wiw32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/img/png/wiw16.png">
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/index.css">
-    <link rel="stylesheet" href="css/about.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:wght@400;700&display=swap">
+    <style>
+        html {
+            font-size: 16px;
+        }
+
+        body, html {
+            margin: 0;
+            padding: 0;
+            font-family: 'IBM Plex Serif', serif;
+            background-color: black;
+            color: white;
+            height: 100%;
+        }
+
+        body {
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
+        }
+
+        header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 20px;
+            background-color: white;
+            position: relative;
+            z-index: 1000;
+        }
+
+        .logo {
+            height: 40px;
+        }
+
+        header nav {
+            display: flex;
+            align-items: center;
+            flex-wrap: wrap;
+            gap: 20px;
+        }
+
+        header nav a {
+            color: black;
+            text-decoration: none;
+            margin-left: 0;
+            font-size: 2.25rem;
+            font-weight: 400;
+            white-space: nowrap;
+        }
+
+        header nav a.active span {
+            background-color: black;
+            color: white;
+            padding: 2px 5px;
+        }
+
+        #principal-about {
+            background-color: black;
+            flex-grow: 1;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 2rem;
+        }
+
+        .content {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            max-width: 1200px;
+            width: 100%;
+            gap: 4rem;
+        }
+
+        .text-content {
+            flex: 1;
+            max-width: 600px;
+        }
+
+        .text-content p {
+            font-size: 1.25rem;
+            line-height: 1.6;
+            color: white;
+            margin: 0;
+        }
+
+        .media-content {
+            flex: 0 0 auto;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        #about-wiw-logo {
+            max-width: 400px;
+            max-height: 500px;
+            width: auto;
+            height: auto;
+            border-radius: 10px;
+            box-shadow: 0 4px 20px rgba(255, 255, 255, 0.2);
+        }
+
+        footer {
+            background-color: white;
+            padding: 10px 0;
+            position: relative;
+            z-index: 1000;
+        }
+
+        footer nav {
+            display: flex;
+            justify-content: space-around;
+            flex-wrap: wrap;
+            gap: 10px;
+            padding: 0 10px;
+        }
+
+        footer nav a {
+            color: black;
+            text-decoration: none;
+            font-size: 2.25rem;
+            font-weight: 400;
+            text-align: center;
+        }
+
+        .logo-link {
+            display: inline-block;
+            line-height: 0;
+        }
+
+        .logo-link:hover {
+            opacity: 0.8;
+            transition: opacity 0.3s ease;
+        }
+
+        /* Tablet adjustments */
+        @media (max-width: 1200px) {
+            html {
+                font-size: 14px;
+            }
+            
+            header nav a, footer nav a {
+                font-size: 1.8rem;
+            }
+
+            .content {
+                gap: 3rem;
+            }
+
+            .text-content p {
+                font-size: 1.1rem;
+            }
+
+            #about-wiw-logo {
+                max-width: 350px;
+                max-height: 450px;
+            }
+        }
+
+        /* Mobile styles */
+        @media (max-width: 768px) {
+            html {
+                font-size: 12px;
+            }
+
+            body {
+                overflow-x: hidden;
+            }
+
+            header {
+                flex-direction: row;
+                align-items: center;
+                padding: 10px 15px;
+                gap: 10px;
+                flex-wrap: wrap;
+            }
+
+            header nav {
+                flex: 1;
+                justify-content: flex-end;
+                flex-wrap: wrap;
+                gap: 8px;
+            }
+
+            header nav a {
+                font-size: 1.3rem;
+                line-height: 1.2;
+                word-break: break-word;
+            }
+
+            #principal-about {
+                padding: 20px 15px;
+                padding-top: 40px;
+            }
+
+            .content {
+                flex-direction: column;
+                gap: 2rem;
+                text-align: center;
+            }
+
+            .text-content {
+                max-width: 100%;
+            }
+
+            .text-content p {
+                font-size: 1rem;
+                line-height: 1.5;
+            }
+
+            #about-wiw-logo {
+                max-width: 280px;
+                max-height: 350px;
+            }
+
+            .logo {
+                height: 35px;
+            }
+
+            footer {
+                padding: 20px 0;
+            }
+
+            footer nav {
+                display: grid;
+                grid-template-columns: 1fr 1fr;
+                grid-gap: 15px;
+                padding: 0 20px;
+                max-width: 400px;
+                margin: 0 auto;
+            }
+
+            footer nav a {
+                font-size: 1.1rem;
+                text-align: center;
+                line-height: 1.3;
+                word-break: break-word;
+                padding: 12px 8px;
+                border-radius: 8px;
+                transition: background-color 0.3s ease;
+                background-color: rgba(0, 0, 0, 0.05);
+                border: 1px solid rgba(0, 0, 0, 0.1);
+            }
+
+            footer nav a:hover {
+                background-color: rgba(0, 0, 0, 0.1);
+            }
+        }
+
+        /* Extra small mobile devices */
+        @media (max-width: 480px) {
+            header {
+                padding: 8px 10px;
+            }
+
+            header nav a {
+                font-size: 1.1rem;
+            }
+
+            #principal-about {
+                padding: 15px 10px;
+                padding-top: 30px;
+            }
+
+            .text-content p {
+                font-size: 0.9rem;
+            }
+
+            #about-wiw-logo {
+                max-width: 250px;
+                max-height: 320px;
+            }
+
+            .logo {
+                height: 28px;
+            }
+
+            footer nav {
+                display: grid;
+                grid-template-columns: 1fr 1fr;
+                grid-gap: 12px;
+                padding: 0 15px;
+                max-width: 350px;
+                margin: 0 auto;
+            }
+
+            footer nav a {
+                font-size: 1rem;
+                padding: 10px 6px;
+                border-radius: 6px;
+            }
+        }
+
+        /* Landscape mobile orientation */
+        @media (max-width: 768px) and (orientation: landscape) {
+            header {
+                flex-direction: row;
+                align-items: center;
+                padding: 8px 15px;
+            }
+
+            header nav {
+                flex-direction: row;
+                flex-wrap: wrap;
+                justify-content: flex-end;
+            }
+
+            header nav a {
+                font-size: 1rem;
+            }
+
+            #principal-about {
+                padding: 15px 10px;
+                padding-top: 25px;
+            }
+
+            .content {
+                flex-direction: row;
+                gap: 2rem;
+            }
+
+            .text-content p {
+                font-size: 0.9rem;
+                text-align: left;
+            }
+
+            #about-wiw-logo {
+                max-width: 200px;
+                max-height: 260px;
+            }
+
+            footer {
+                padding: 15px 0;
+            }
+
+            footer nav {
+                display: grid;
+                grid-template-columns: 1fr 1fr;
+                grid-gap: 10px;
+                padding: 0 10px;
+                max-width: 320px;
+                margin: 0 auto;
+            }
+
+            footer nav a {
+                font-size: 0.9rem;
+                padding: 8px 4px;
+                border-radius: 5px;
+            }
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -16,7 +365,7 @@
             <img src="assets/img/png/wiwblack.png" alt="WiW Logo" class="logo">
         </a>
         <nav>
-            <a href="#" class="active">humachine human<span>ized experiment</span></a>
+            <a href="index.html" class="active">humachine human<span>ized experiment</span></a>
             <a href="about.html" class="active">about</a>
         </nav>
     </header>
