--- a/index.html
+++ b/index.html
@@ -41,12 +41,20 @@
             height: 40px;
         }
 
+        header nav {
+            display: flex;
+            align-items: center;
+            flex-wrap: wrap;
+            gap: 20px;
+        }
+
         header nav a {
             color: black;
             text-decoration: none;
-            margin-left: 20px;
+            margin-left: 0;
             font-size: 2.25rem;
             font-weight: 400;
+            white-space: nowrap;
         }
 
         header nav a.active span {
@@ -308,8 +316,6 @@
             box-shadow: 0 4px 20px rgba(255, 255, 255, 0.2);
         }
 
-
-
         .next-button {
             position: absolute;
             right: 20px;
@@ -353,6 +359,9 @@
         footer nav {
             display: flex;
             justify-content: space-around;
+            flex-wrap: wrap;
+            gap: 10px;
+            padding: 0 10px;
         }
 
         footer nav a {
@@ -360,6 +369,7 @@
             text-decoration: none;
             font-size: 2.25rem;
             font-weight: 400;
+            text-align: center;
         }
 
         .logo-link {
@@ -376,6 +386,7 @@
             z-index: 999 !important;
         }
 
+        /* Tablet adjustments */
         @media (max-width: 1200px) {
             html {
                 font-size: 14px;
@@ -386,10 +397,18 @@
             }
             
             .text-content.expanded {
-                width: 550px;
+                width: auto;
+                max-width: 100%;
+                max-height: none;
+                transition: max-height 0.3s ease;
+            }
+            
+            header nav a, footer nav a {
+                font-size: 1.8rem;
             }
         }
 
+        /* Mobile styles */
         @media (max-width: 768px) {
             html {
                 font-size: 12px;
@@ -397,6 +416,28 @@
 
             body {
                 overflow-y: auto;
+                overflow-x: hidden;
+            }
+
+            header {
+                flex-direction: row;
+                align-items: center;
+                padding: 10px 15px;
+                gap: 10px;
+                flex-wrap: wrap;
+            }
+
+            header nav {
+                flex: 1;
+                justify-content: flex-end;
+                flex-wrap: wrap;
+                gap: 8px;
+            }
+
+            header nav a {
+                font-size: 1.3rem;
+                line-height: 1.2;
+                word-break: break-word;
             }
 
             .content {
@@ -405,6 +446,8 @@
                 flex-direction: column;
                 align-items: stretch;
                 justify-content: flex-start;
+                min-height: calc(100vh - 120px);
+                padding-top: 40px;
             }
 
             .text-content {
@@ -414,6 +457,7 @@
                 transform: none;
                 left: auto;
                 top: auto;
+                position: relative;
             }
 
             .title-section {
@@ -439,10 +483,6 @@
                 cursor: default;
             }
 
-            header nav a, footer nav a {
-                font-size: 1.5rem;
-            }
-
             h1 {
                 font-size: 2.5rem;
             }
@@ -456,6 +496,124 @@
                 top: auto;
                 right: 20px;
                 transform: none;
+            }
+
+            /* Hide size controls on mobile */
+            .size-controls,
+            .media-size-controls {
+                display: none !important;
+            }
+
+            footer {
+                padding: 20px 0;
+            }
+
+            footer nav {
+                display: grid;
+                grid-template-columns: 1fr 1fr;
+                grid-gap: 15px;
+                padding: 0 20px;
+                max-width: 400px;
+                margin: 0 auto;
+            }
+
+            footer nav a {
+                font-size: 1.1rem;
+                text-align: center;
+                line-height: 1.3;
+                word-break: break-word;
+                padding: 12px 8px;
+                border-radius: 8px;
+                transition: background-color 0.3s ease;
+                background-color: rgba(0, 0, 0, 0.05);
+                border: 1px solid rgba(0, 0, 0, 0.1);
+            }
+
+            footer nav a:hover {
+                background-color: rgba(0, 0, 0, 0.1);
+            }
+
+            .logo {
+                height: 35px;
+            }
+        }
+
+        /* Extra small mobile devices */
+        @media (max-width: 480px) {
+            header {
+                padding: 8px 10px;
+            }
+
+            header nav a {
+                font-size: 1.1rem;
+            }
+
+            footer nav {
+                display: grid;
+                grid-template-columns: 1fr 1fr;
+                grid-gap: 12px;
+                padding: 0 15px;
+                max-width: 350px;
+                margin: 0 auto;
+            }
+
+            footer nav a {
+                font-size: 1rem;
+                padding: 10px 6px;
+                border-radius: 6px;
+            }
+
+            .content {
+                padding: 10px;
+                padding-top: 25px;
+            }
+
+            .text-content {
+                padding: 15px;
+            }
+
+            h1 {
+                font-size: 2rem;
+            }
+
+            .logo {
+                height: 28px;
+            }
+        }
+
+        /* Landscape mobile orientation */
+        @media (max-width: 768px) and (orientation: landscape) {
+            header {
+                flex-direction: row;
+                align-items: center;
+                padding: 8px 15px;
+            }
+
+            header nav {
+                flex-direction: row;
+                flex-wrap: wrap;
+                justify-content: flex-end;
+            }
+
+            header nav a {
+                font-size: 0.9rem;
+            }
+
+            .content {
+                padding: 10px;
+            }
+
+            footer {
+                padding: 5px 0;
+            }
+
+            footer nav {
+                flex-direction: row;
+                justify-content: space-around;
+            }
+
+            footer nav a {
+                font-size: 0.7rem;
             }
         }
     </style>
